# EpixVanity

./: .gitignore  README.md  install.py  install_cpu_only.py  pyproject.toml  requirements-gpu.txt  requirements.txt  run_tests.py  setup.py  setup_venv.py
epix_vanity/: __init__.py  cli.py
epix_vanity/core/: __init__.py  config.py  crypto.py  generator.py
epix_vanity/gpu/: __init__.py  cuda_generator.py  opencl_generator.py
epix_vanity/utils/: __init__.py  logging.py  patterns.py  performance.py
examples/: basic_usage.py  gpu_usage.py  pattern_examples.py
tests/: __init__.py  conftest.py  test_config.py  test_crypto.py  test_generator.py  test_patterns.py
